--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.4",
     "axios": "^0.26.1",
+    "js-cookie": "^3.0.1",
     "postcss": "^8.4.12",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
